# roll2d6-server-haskell

./: .gitignore  ChangeLog.md  LICENSE  cabal.project  cli.sh  faterpg-server.cabal  reset.sh  roll2d6-server.cabal  rpg-server.cabal
scripts/: extensions.sql  init.sql  insert_game_sheet_ids.sql  reset.sql
src/: API.hs  Arango.hs  Auth.hs  Config.hs  CouchDB.hs  Database.hs  EventSource.hs  Main.hs  Redis.hs  Types.hs  event-source.html
