cabal-version:       2.4
name:                roll2d6-server
version:             0.1.0.0
-- synopsis:
-- description:
license:             AGPL-3.0-only
license-file:        LICENSE
author:              Eric Nething
maintainer:          eric@roll2d6.org
copyright:           (C) 2018 Eric Nething
category:            Application
build-type:          Simple
extra-source-files:  ChangeLog.md

executable roll2d6-server
  main-is:             Main.hs
  other-modules:       Types
                     , Database
                     , CouchDB
                     , Auth
                     , API
                     , Config
                     , Redis
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0
                     , servant-server
                     , warp
                     , postgresql-simple
                     , aeson
                     , text
                     , wai
                     , wai-extra
                     , containers
                     , http-types
                     , binary
                     , transformers
                     , mtl
                     , hedis
                     , entropy
                     , bytestring
                     , req
                     , data-default-class
                     , http-reverse-proxy
                     , http-client
                     , uuid-types
                     , time
                     , resource-pool
                     , safe
                     , http-api-data
                     , cookie
  hs-source-dirs:      src
  default-language:    Haskell2010
