name:                rpg-server
version:             0.1.0.0
-- synopsis:
-- description:
license:             AGPL-3.0
license-file:        LICENSE
author:              Eric Nething
maintainer:          emnething@gmail.com
copyright:           (C) 2018 Eric Nething
category:            Application
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable rpg-server
  main-is:             Main.hs
  other-modules:       Types
                     , Database
                     , CouchDB
                     , Auth
                     , EventSource
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12
                     , scotty
                     , postgresql-simple
                     , aeson
                     , text
                     , wai
                     , wai-extra
                     , containers
                     , http-types
                     , binary
                     , transformers
                     , hedis
                     , entropy
                     , bytestring
                     , req
                     , data-default-class
                     , http-reverse-proxy
                     , http-client
                     , uuid-types
                     , stm
                     , stm-containers
                     , focus
                     , time
                     , list-t
  hs-source-dirs:      src
  default-language:    Haskell2010
